# imager

./: README.md  com.rutins.Imager.json  meson.build
data/: com.rutins.Imager.appdata.xml.in  com.rutins.Imager.desktop.in  com.rutins.Imager.gschema.xml  meson.build
data/icons/: meson.build
data/res/: imager.gresource.xml  meson.build
data/res/ui/: window.blp
po/: POTFILES  meson.build
src/: main.vala  meson.build
src/core/: application.vala  meson.build
src/ui/: meson.build  window.vala
src/util/: meson.build  router.vala
src/util/router/: meson.build  router-thumbnail.vala  router-view.vala  router.vala
